--- a/app/views/organized/parking_notifications/show.html.haml
+++ b/app/views/organized/parking_notifications/show.html.haml
@@ -22,7 +22,21 @@
           %td= @parking_notification.user.display_name
         %tr
           %td Kind
-          %td= @parking_notification.kind_humanized
+          %td
+            %strong
+              = @parking_notification.kind_humanized
+            notification
+        %tr
+          %td
+            Status
+          %td
+            - if @parking_notification.current?
+              %em.less-strong
+                This is the most recent parking notification
+            - elsif @parking_notification.superseded?
+            - elsif @parking_notification.impounded?
+            - elsif @parking_notification.retrieved?
+
         %tr
           %td= t(".bike")
           %td
@@ -34,12 +48,12 @@
                   view all notifications for
                   %em
                     = @bike.type
-        %tr
-          %td= t(".address")
-          %td= address_formatted(@parking_notification)
   .col-md-6
     %table.table-list
       %tbody
+        %tr
+          %td= t(".address")
+          %td= address_formatted(@parking_notification)
         %tr
           %td Location
           %td
@@ -102,6 +116,25 @@
     });
   </script>
 
+- if @parking_notification.active?
+  .row
+    .mt-4.mb-4.col-md-8.offset-md-2.col-xl-6.offset-xl-3
+      .card
+        = form_for ParkingNotification.new, url: organization_parking_notifications_path(organization_id: current_organization) do |f|
+          = hidden_field_tag :ids, @parking_notification.id
+          .card-block
+            .card-title
+              %h3.uncap
+                - if @parking_notification.send_email?
+                  Send repeat notification
+                - else
+                  Repeat notification
+            .card-body
+              .row
+                .col-xs-6
+                  = select_tag :kind, options_for_select(ParkingNotification.kinds_humanized.map { |k, v| [v, k] }, selected: @parking_notification.kind), class: "form-control"
+                .col-xs-6.text-center
+                  = submit_tag "Create notification", class: "btn btn-success btn-md-lg"
 
 - if @related_notifications.any?
   %h3{ style: "margin-top: 60px;" }
@@ -112,3 +145,10 @@
   %h2.uncap.mt-4 Preview of email sent:
   .email-preview
     <iframe src="#{email_organization_parking_notification_path(@parking_notification, organization_id: current_organization.to_param)}"></iframe>
+- else
+  %p.text-warning.mt-4
+    %em
+      - if @parking_notification.unregistered_bike?
+        No email sent because this #{@bike.type} isn't registered
+      - else
+        No email sent because we were unable to determine who to send the email to
