--- a/app/views/admin/bikes/_bike.html.haml
+++ b/app/views/admin/bikes/_bike.html.haml
@@ -119,7 +119,7 @@
         %span.float-right
           = link_to edit_admin_stolen_bike_url(stolen_record.id, stolen_record_id: true) do
             - if stolen_record.approved?
-              Stolen message
+              Stolen message/photos
             - else
               Stolen message/approval
     .row
