--- a/app/views/organized_mailer/parking_notification.html.haml
+++ b/app/views/organized_mailer/parking_notification.html.haml
@@ -26,4 +26,4 @@
         Let
         %strong
           = @organization.name
-        know that you retrieved your #{@bike.type}!
+        know that you retrieved your #{@bike.type}! Click the button above.
