--- a/app/views/organized_mailer/parking_notification.html.haml
+++ b/app/views/organized_mailer/parking_notification.html.haml
@@ -25,5 +25,5 @@
       %em
         Let
         %strong
-          = @organization.name
+          = @organization&.name
         know that you retrieved your #{@bike.type}! Click the button above.
