Drop `address` cols, add Geocodeable#address

--- a/app/views/admin/bikes/_bike.html.haml
+++ b/app/views/admin/bikes/_bike.html.haml
@@ -175,7 +175,7 @@
               %td
                 Location
               %td
-                = stolen_record.display_address
+                = stolen_record.address
                 - if stolen_record.missing_location?
                   %em.small.text-warning missing address (user alerted)
             %tr
