--- a/app/views/bikes/pdf.html.haml
+++ b/app/views/bikes/pdf.html.haml
@@ -52,7 +52,7 @@
               %td.td-title
                 = t(".location")
               %td
-                = @stolen_record.display_address
+                = @stolen_record.address
 
       .bike-details
         %table.table.table-striped
