Remove TwitterAccounts state and country columns
- Updates TwitterAccount dashboard
- Don't reverse geocode state if not a US account

--- a/app/views/admin/twitter_accounts/index.html.haml
+++ b/app/views/admin/twitter_accounts/index.html.haml
@@ -46,7 +46,7 @@
           %td
             %small.less-strong= twitter_account.city
           %td
-            %small.less-strong= twitter_account.state
+            %small.less-strong= twitter_account.state&.abbreviation
           %td
-            %small.less-strong= twitter_account.country
+            %small.less-strong= twitter_account.country&.name
           %td= twitter_account.tweets.count
