--- a/app/views/bikes/show.html.haml
+++ b/app/views/bikes/show.html.haml
@@ -32,6 +32,10 @@
   -# otherwise we're displaying user data
   - if current_user.present? && passive_organization.present? && current_user.authorized?(passive_organization)
     = render partial: "organized_access_panel"
+
+  - if current_user.present? && @bike.user == current_user
+    = render partial: "owner_bike_status"
+
   .row
     .col-md-8
       %h1
